--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,12 +1,25 @@
 server {
     listen: 80;
-    server_name www.buld.site;
-    return 301 http://buld.site$request_uri;
+    server_name www.buld.site buld.site;
+    return 301 https://buld.site$request_uri;
 }
 
 server {
-    listen: 80;
+    listen 443 ssl;
+    server_name www.buld.site;
+
+    ssl_certificate /etc/letsencrypt/live/buld.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/buld.site/privkey.pem;
+
+    return 301 https://buld.site$request_uri;
+}
+
+server {
+    listen: 443 ssl;
     server_name buld.site;
+
+    ssl_certificate /etc/letsencrypt/live/buld.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/buld.site/privkey.pem;
 
     location / {
         proxy_pass http://frontend:5173;
