--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,5 +1,5 @@
 server {
-    listen: 80;
+    listen 80;
     server_name www.buld.site buld.site;
     return 301 https://buld.site$request_uri;
 }
@@ -15,7 +15,7 @@ server {
 }
 
 server {
-    listen: 443 ssl;
+    listen 443 ssl;
     server_name buld.site;
 
     ssl_certificate /etc/letsencrypt/live/buld.site/fullchain.pem;
