fix: need to mount host volume of certbot to nginx in docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrpyt:/etc/letsencrypt:ro
     ports:
       - "80:80"
       - "443:443"
